--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <section id="video">
         <h3>Check out this video!</h3>
         <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/tMfmxbZcYm0?start=2537" 
             title="YouTube video" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
