--- a/index.html
+++ b/index.html
@@ -119,7 +119,27 @@
             <p>This is the logo of my favorite band.</p>
         </div>
     </section>
-
+<section id="sports">
+    <h3>Sports I Play</h3>
+    <ul>
+        <li>Hockey</li>
+        <li>Baseball</li>
+        <li>Skiing</li>
+        <li>Football</li>
+    </ul>
+</section>
+<section id="books">
+    <h3>My Favorite Books</h3>
+    <ul>
+        <li>The Hobbit</li>
+        <li>The Fort</li>
+        <li>Goosebumps series</li>
+    </ul>
+</section>
+<section id="music">
+    <h3>Music</h3>
+    <p>I play the trumpet! I enjoy performing and learning new pieces.</p>
+</section>    
     <!-- Embedded Video Section -->
     <section id="video">
         <h3>Check out this video!</h3>
